--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World!</title>
+    <title>My first website</title>
   </head>
   <body>
-    <h1>test test test</h1>
+    <h1>Hello world!</h1>
+    <p>Welcome to my first website.</p>
   </body>
-  test
 </html>
